# mycp

./: .gitignore  CMakeLists.txt  evaluate.sh
include/: eval.h  mycp.h  trie.h
src/: eval.cpp  eval_main.cpp  flush_main.cpp  main.cpp  mycp.cpp
